--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,11 +1,12 @@
 ---
-layout: page
+layout: about
 title: CV
 ---
 Download my CV <a href = "https://ngbrianyc.github.io/assets/pdfs/Update Resume.pdf"> here</a>.
 
-<!-- insert just before the closing body tag </body> -->
-<script src='/path-to-your-javascript-file/pdfobject.js'></script>
-<script>
-PDFObject.embed("https://ngbrianyc.github.io/assets/pdfs/Update Resume.pdf");
-</script>
+<object data='https://ngbrianyc.github.io/assets/pdfs/Update Resume.pdf' 
+        type='application/pdf' 
+        width='100%' 
+        height='100%'>
+<p>This browser does not support inline PDFs. Please download the PDF to view it: <a href="https://ngbrianyc.github.io/assets/pdfs/Update Resume.pdf">Download PDF</a></p>
+</object>
